# rust-api

./: .env  Cargo.toml  readme.md
src/: api_doc.rs  main.rs
src/handlers/: hello.rs
src/router/: hello_router.rs  mod.rs
