[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
utoipa = "5.3.1"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }